# cookiecutter-conda-pyproject

./: README.md  cookiecutter.json  cookiecutter_conda_pyproject.py  setup.py  tasks.py
hooks/: post_gen_project.py
{{ cookiecutter.project_name }}/: .coveragerc  .editorconfig  .gitattributes  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.prod.yml  docker-compose.yml  env.dev.yml  env.yml  environment.yml  mypy.ini  pyproject.toml  pytest.ini  setup.cfg  setup.py  tasks.py
{{ cookiecutter.project_name }}/.github/: CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md
{{ cookiecutter.project_name }}/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
{{ cookiecutter.project_name }}/.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
{{ cookiecutter.project_name }}/.github/actions/: test.yml
{{ cookiecutter.project_name }}/.github/workflows/: ci.yml  release.yml
{{ cookiecutter.project_name }}/.gitlab/: CODEOWNERS
{{ cookiecutter.project_name }}/.gitlab/merge_request_templates/: default.md
{{ cookiecutter.project_name }}/conda-recipe/: meta.yaml
{{ cookiecutter.project_name }}/envs/: dev.yml
{{ cookiecutter.project_name }}/licenses/: BSD-2-Clause  BSD-3-Clause  ISC  MIT
{{ cookiecutter.project_name }}/src/{{ cookiecutter.project_slug }}/: __about__.py  __init__.py  _version.py
{{ cookiecutter.project_name }}/templates/: module.py.tmpl
{{ cookiecutter.project_name }}/tests/: test_about.py
