[build-system]
  requires = ["setuptools>=30.3.0", "wheel"]

[tool.black]
line-length = 88

[tool.coverage.run]
 omit = [
   "setup.py",
   "tasks/",
   "tests/",
   "versioneer.py",
   "src/{{ cookiecutter.project_slug }}/_version.py"
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",                  # re-enable standard pragma
  "def __repr__",                      # no debug-only code
  "if self.debug",
  "raise AssertionError",
  "raise NotImplementedError",
  "if logger\.isEnabledFor",
  "if __name__ == [\"']__main__[\"']:" # no module excecutable code
]
